--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,9 @@
+variables:
+  URL_REGISTRE_IMAGE: "registre.priv.iutdelens.ovh"
+  URL_DOCKERHUB: "dockerhub.priv.iutdelens.ovh"
+  IMAGE : "${USER_LOGIN}/${CI_PROJECT_NAME}/client:${CI_COMMIT_SHORT_SHA}"
+  URL_WEBSITE : "groupe1.priv.iutdelens.ovh"
+
 image: dockerhub.priv.iutdelens.ovh/node:latest
 # This folder is cached between builds
 cache:
@@ -8,6 +14,7 @@ stages:
   - config
   - test
   - analyse
+  - build
 
 config:
   stage: config
@@ -30,3 +37,21 @@ eslint:
   script:
     - npm run lint
   allow_failure: true
+
+
+build-image:
+  stage: build
+  tags:
+    - "sae-s4a01"
+  image:
+      name: gcr.io/kaniko-project/executor:v1.9.2-debug
+      entrypoint: [""]
+  script:
+        - mkdir -p /kaniko/.docker
+        - echo "{\"auths\":{\"${URL_REGISTRE_IMAGE}\":{\"auth\":\"$(printf "%s:%s" "${USER_LOGIN}" "${PASSWORD_IUT}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+        - >-
+          /kaniko/executor
+          --context "${CI_PROJECT_DIR}"
+          --dockerfile "${CI_PROJECT_DIR}/Dockerfile-prod"
+          --destination "${URL_REGISTRE_IMAGE}/${IMAGE}"
+  when: manual
