Ajout du job de deploiemlent (CD02), #46

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,3 +68,17 @@ envoi_container:
     - build-image
   when: manual
 
+deploy:
+  image: dockerhub.priv.iutdelens.ovh/mmasquelin/nomad-deployer:latest
+  stage: deploy
+  tags:
+    - "sae-s4a01"
+  script:
+    - export NOMAD_ADDR=http://172.18.38.46:4646/
+    - envsubst '${CI_PROJECT_NAME} ${CI_COMMIT_SHORT_SHA} ${NEXUS_USER} ${$NEXUS_PWD} ${URL_REGISTRE} ${IMAGE} ${URL_WEBSITE}' < project.nomad > job.nomad
+    - nomad validate job.nomad
+    - nomad plan job.nomad || if [ $? -eq 255 ]; then exit 255; else echo "success"; fi
+    - nomad run job.nomad
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main"'
+  when: manual
